--- a/movie_review_service/docker-compose.yml
+++ b/movie_review_service/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/movie_reviews
 
   db:
-    image: postgres:15-alpine
+    image: registry.hub.docker.com/library/postgres:15.2
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
