--- a/movie_review_service/requirements.txt
+++ b/movie_review_service/requirements.txt
@@ -3,4 +3,11 @@ uvicorn==0.24.0
 tortoise-orm[asyncpg]==0.20.0
 aerich==0.7.2
 python-multipart==0.0.6
-numpy==1.26.2 
+numpy==1.26.2
+
+# New dependencies for ML training
+torch==2.1.0
+transformers==4.36.0
+datasets==2.15.0
+scikit-learn==1.3.2
+tqdm==4.66.1 
