--- a/.gitignore
+++ b/.gitignore
@@ -171,12 +171,6 @@ cython_debug/
 .pypirc
 
 # Pytorch model files
-app/ml/models/best_model/*.safetensors
-app/ml/models/best_model/*.bin
-app/ml/models/best_model/*.pt
-app/ml/models/best_model/pytorch_model.*
-app/ml/models/best_model/*.h5
-app/ml/models/best_model/*.onnx
 **/__pycache__/
 *.pyc
 
@@ -189,3 +183,8 @@ ml/training/outputs/
 .cache/
 ml/models/best_model/model.safetensors
 movie_review_service/app/ml/models/best_model/model.safetensors
+movie_review_service/app/ml/models/best_model/config.json
+movie_review_service/app/ml/models/best_model/model_config.json
+movie_review_service/app/ml/models/best_model/special_tokens_map.json
+movie_review_service/app/ml/models/best_model/tokenizer_config.json
+movie_review_service/app/ml/models/best_model/vocab.txt
