Refactor Docker configuration and ML sentiment analysis workflow
- Update docker-compose.yml with improved volume mounting and restart policies
- Modify Dockerfile to simplify project copying and dependency installation
- Enhance ML sentiment analysis with device-aware inference and async prediction
- Restructure sentiment analysis routes and models for better separation of concerns
- Update requirements to clarify ML training dependencies

--- a/movie_review_service/docker-compose.yml
+++ b/movie_review_service/docker-compose.yml
@@ -2,15 +2,18 @@ version: '3.8'
 
 services:
   api:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
-      - ./app:/app/app
+      - .:/app  # Mount the entire project directory
     depends_on:
       - db
     environment:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/movie_reviews
+    restart: unless-stopped  # Add restart policy
 
   db:
     image: registry.hub.docker.com/library/postgres:15.2
@@ -22,6 +25,7 @@ services:
       - POSTGRES_DB=movie_reviews
     ports:
       - "5432:5432"
+    restart: unless-stopped  # Add restart policy
 
 volumes:
   postgres_data: 
