--- a/movie_review_service/requirements.txt
+++ b/movie_review_service/requirements.txt
@@ -5,7 +5,7 @@ aerich==0.7.2
 python-multipart==0.0.6
 numpy==1.26.2
 
-# New dependencies for ML training
+# ML training dependencies
 torch==2.1.0
 transformers==4.36.0
 datasets==2.15.0
