Enhance project documentation and migration configuration
- Update README.md with comprehensive project details and technical documentation
- Modify .gitignore to include Aerich migration files
- Update docker-compose.yml to run Aerich migrations automatically
- Refactor main.py to use async lifespan context for Tortoise ORM initialization
- Improve project structure and setup instructions

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,7 @@ movie_review_service/app/ml/models/best_model/model_config.json
 movie_review_service/app/ml/models/best_model/special_tokens_map.json
 movie_review_service/app/ml/models/best_model/tokenizer_config.json
 movie_review_service/app/ml/models/best_model/vocab.txt
+
+# Aerich migrations
+migrations/*
+!migrations/.gitkeep
