--- a/movie_review_service/docker-compose.yml
+++ b/movie_review_service/docker-compose.yml
@@ -13,6 +13,9 @@ services:
       - db
     environment:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/movie_reviews
+    command: >
+      sh -c "aerich upgrade &&
+             uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
     restart: unless-stopped  # Add restart policy
 
   db:
