--- a/movie_review_service/docker-compose.yml
+++ b/movie_review_service/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+# version: '3.8'
 
 services:
   api:
@@ -8,15 +8,21 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/app  # Mount the entire project directory
+      - .:/app
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/movie_reviews
     command: >
-      sh -c "aerich upgrade &&
-             uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
-    restart: unless-stopped  # Add restart policy
+      sh -c "
+        if [ ! -f /app/.initialized ]; then
+          python init_db.py &&
+          touch /app/.initialized
+        fi &&
+        uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+      "
+    restart: unless-stopped
 
   db:
     image: registry.hub.docker.com/library/postgres:15.2
@@ -28,7 +34,12 @@ services:
       - POSTGRES_DB=movie_reviews
     ports:
       - "5432:5432"
-    restart: unless-stopped  # Add restart policy
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
 
 volumes:
   postgres_data: 
