--- a/movie_review_service/requirements.txt
+++ b/movie_review_service/requirements.txt
@@ -6,7 +6,8 @@ python-multipart==0.0.6
 numpy==1.26.2
 
 # ML training dependencies
-torch==2.1.0
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.1.0+cpu
 transformers==4.36.0
 datasets==2.15.0
 scikit-learn==1.3.2
